# nya-result

./: .editorconfig  .gitmodules  .pre-commit-config.yaml  README.md  publish.sh  pyproject.toml
src/nya_result/: __init__.py  _base.py  _direct.py  _indirect.py  direct.py  indirect.py
tests/: test_direct.py  test_indirect.py  test_shared.py
